Added upgrading settlements